{
  "version": 4,
  "terraform_version": "0.12.14",
  "serial": 1301,
  "lineage": "110414bd-58a5-51bb-51a7-2a8889203ddf",
  "resources": [
    {
      "module": "module.jekyll-devbox",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jekyll-host",
      "provider": "module.jekyll-devbox.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d6621c01e8c2de2c",
            "arn": "arn:aws:ec2:us-west-2:555344254085:instance/i-0301a8f0bbdb77cdb",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0301a8f0bbdb77cdb",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ansible-server",
            "monitoring": false,
            "primary_network_interface_id": "eni-0c4bbf7ba966e2ae9",
            "private_dns": "ip-10-0-0-227.us-west-2.compute.internal",
            "private_ip": "10.0.0.227",
            "public_dns": "ec2-34-216-153-86.us-west-2.compute.amazonaws.com",
            "public_ip": "34.216.153.86",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-09a0497c1c4dab920",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-02d9f894d0fd2d161",
            "tags": {
              "Name": "Jekyll-Host"
            },
            "tenancy": "default",
            "timeouts": {
              "create": "60m",
              "delete": "60m",
              "update": "60m"
            },
            "vpc_security_group_ids": [
              "sg-0d5760b7d366d9bfa"
            ]
          },
          "dependencies": [
            "module.jekyll-devbox.aws_internet_gateway.jekyll-host",
            "module.jekyll-devbox.aws_security_group.jekyll-hosts",
            "module.jekyll-devbox.aws_subnet.jekyll-host",
            "module.jekyll-devbox.aws_vpc.jekyll-host"
          ]
        }
      ]
    },
    {
      "module": "module.jekyll-devbox",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "jekyll-host",
      "provider": "module.jekyll-devbox.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0dce7d52e773d8e82",
            "owner_id": "555344254085",
            "vpc_id": "vpc-06ca70c37aea93839"
          },
          "dependencies": [
            "module.jekyll-devbox.aws_vpc.jekyll-host"
          ]
        }
      ]
    },
    {
      "module": "module.jekyll-devbox",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "jekyll-host",
      "provider": "module.jekyll-devbox.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-000a25003d30d1a72",
            "owner_id": "555344254085",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dce7d52e773d8e82",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-06ca70c37aea93839"
          },
          "dependencies": [
            "module.jekyll-devbox.aws_internet_gateway.jekyll-host",
            "module.jekyll-devbox.aws_vpc.jekyll-host"
          ]
        }
      ]
    },
    {
      "module": "module.jekyll-devbox",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jekyll-host",
      "provider": "module.jekyll-devbox.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03e150e9c28791cae",
            "route_table_id": "rtb-000a25003d30d1a72",
            "subnet_id": "subnet-02d9f894d0fd2d161"
          },
          "dependencies": [
            "module.jekyll-devbox.aws_internet_gateway.jekyll-host",
            "module.jekyll-devbox.aws_route_table.jekyll-host",
            "module.jekyll-devbox.aws_subnet.jekyll-host",
            "module.jekyll-devbox.aws_vpc.jekyll-host"
          ]
        }
      ]
    },
    {
      "module": "module.jekyll-devbox",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jekyll-hosts",
      "provider": "module.jekyll-devbox.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:555344254085:security-group/sg-0d5760b7d366d9bfa",
            "description": "Security group for all nodes in the cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d5760b7d366d9bfa",
            "ingress": [],
            "name": "jekyll nodes",
            "name_prefix": null,
            "owner_id": "555344254085",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-06ca70c37aea93839"
          },
          "dependencies": [
            "module.jekyll-devbox.aws_vpc.jekyll-host"
          ]
        }
      ]
    },
    {
      "module": "module.jekyll-devbox",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "jekyll-admin-ssh",
      "provider": "module.jekyll-devbox.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "174.222.128.55/32"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-1134494528",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d5760b7d366d9bfa",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "module.jekyll-devbox.aws_security_group.jekyll-hosts",
            "module.jekyll-devbox.aws_vpc.jekyll-host"
          ]
        }
      ]
    },
    {
      "module": "module.jekyll-devbox",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "jekyll-preview-http",
      "provider": "module.jekyll-devbox.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 4000,
            "id": "sgrule-2440716368",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d5760b7d366d9bfa",
            "self": false,
            "source_security_group_id": null,
            "to_port": 4000,
            "type": "ingress"
          },
          "dependencies": [
            "module.jekyll-devbox.aws_security_group.jekyll-hosts",
            "module.jekyll-devbox.aws_vpc.jekyll-host"
          ]
        }
      ]
    },
    {
      "module": "module.jekyll-devbox",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jekyll-host",
      "provider": "module.jekyll-devbox.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:555344254085:subnet/subnet-02d9f894d0fd2d161",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-02d9f894d0fd2d161",
            "map_public_ip_on_launch": false,
            "owner_id": "555344254085",
            "vpc_id": "vpc-06ca70c37aea93839"
          },
          "dependencies": [
            "module.jekyll-devbox.aws_vpc.jekyll-host"
          ]
        }
      ]
    },
    {
      "module": "module.jekyll-devbox",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "jekyll-host",
      "provider": "module.jekyll-devbox.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:555344254085:vpc/vpc-06ca70c37aea93839",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01c7e3f69458de54a",
            "default_route_table_id": "rtb-0085b5ccdf391992b",
            "default_security_group_id": "sg-0771ea5dee5b9e4c9",
            "dhcp_options_id": "dopt-0c9edf75",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-06ca70c37aea93839",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0085b5ccdf391992b",
            "owner_id": "555344254085",
            "tags": {
              "Name": "jekyll-host"
            }
          }
        }
      ]
    }
  ]
}